@startuml mcd
' Modèle Conceptuel de Données (MCD) - notation entité-association
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
hide circle
skinparam class {
  BackgroundColor #EAF2FB
  BorderColor #0d3b66
  ArrowColor #0d6efd
}

entity "EQUIPEMENT" as equip {
  id
  --
  nom
  adresse_ip
  type_equipement
  statut
  latence_ms
}

entity "JOURNAL" as journal {
  id
  --
  statut
  latence_ms
  date_evenement
}

entity "ALERTE" as alerte {
  id
  --
  type_alerte
  severite
  acquittee
  date_alerte
}

entity "UTILISATEUR" as user {
  id
  --
  identifiant
  mot_de_passe_hash
  role
}

entity "STATISTIQUE" as stat {
  id
  --
  date_stat
  taux_disponibilite
  latence_moyenne
}

equip ||--o{ journal : "génère\n(1,n)"
equip ||--o{ alerte : "déclenche\n(1,n)"
user }o--o{ equip : "supervise\n(0,n)-(1,n)"
user ||--o{ alerte : "acquitte\n(0,n)"

@enduml
